--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -30,7 +30,7 @@
 <section class="sub-section" id="about-me">
     <div class="information">
         <h2>About Me</h2>
-        <p>Hello! I am currently a last year Computer Programming student at Georgian College. I am currently in the Co-op program! I am passionate in pursuing a career in tech. The constant change and evolution of technology always excites me and motivates me to evolve with the world of technology, and as someone who constantly likes to explore and learn new things, I am super excited to start my journey in this field! Even though this is just the beginning of my adventure, I am a fast learner, so I am confident that I will always overcome challenges and difficulties to bring awesome results in the end.</p>
+        <p>Hello! I am currently a last year Computer Programming student at Georgian College. I am currently in the Co-op program! I am passionate in pursuing a career in tech. The constant change and evolution of technology always excites me and motivates me to evolve with the world of technology, and as someone who constantly likes to explore and learn new things, I am super excited to start my journey technology field! Even though this is just the beginning of my adventure, I am a fast learner, so I am confident that I will always overcome challenges and difficulties to bring awesome results in the end.</p>
     </div>
     <div class="headshot-container">
         <img class="headshot" src="images/headshot.jpg" alt="Bojitha headshot" />
