--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -2,7 +2,7 @@
 <div class="hero-area">
     <div class="hero-text">
         <h1>Bojitha Umagiliya</h1>
-        <p>Full Stack Developer</p>
+        <p>Full Stack Software Developer</p>
         <div class="button"><a href="#about-me">About me</a></div>
     </div>
     <div class="socials">
